--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style-switcher.css">
   </head>
 
-  <body >
+  <body class="dark" >
     <!-- ===========  Main Container Start  =========== -->
     <div class="main-container">
       <!-- ===========  aside start  =========== -->
@@ -66,16 +66,16 @@
                   <span class="name">Edgar Andres Delgado Castellano</span>
                 </h3>
                 <h3 class="my-profession">
-                  I' m a <span class="typing">Junior web Developer</span>
+                  I'm a <span class="typing">Junior web Developer</span>
                 </h3>
                 <p>
                   Systems engineer with a year and a half of experience in web
                   development focused on front-end development, and may more...
                 </p>
-                <a href="#" class="btn">Download CV</a>
+                <a href="https://1drv.ms/b/s!AqEsvNn3rPRAxGo_SeMCZqK3fl6N?e=moX68N/CV_Andres.pdf" download="CV_Andres.pdf" target="_blank" class="btn">Download CV</a>
               </div>
               <div class="home-img padd-15">
-                <img src="hero11.png" alt="" />
+                <img src="hero1.png" alt="" />
               </div>
             </div>
           </div>
@@ -127,6 +127,13 @@
                       <div class="info-item padd-15">
                         <p>Phone : <span> +61 423730130</span></p>
                       </div>
+                      <div class="info-item padd-15">
+                        <p>Website : <span> www.andresdelgado.dev</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Role : <span> Front-End Developer</span></p>
+                      </div>
+
                       <div class="info-item padd-15">
                         <p>
                           City : <span> Colombian living in Melbourne</span>
@@ -296,6 +303,26 @@
                             </p>
                           </div>
                           <!-- ===========  End item =========== -->
+                          <!-- ===========   item  3=========== -->
+                          <!-- <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2014 -2017
+                            </h3>
+                            <h4 class="timeline-title">
+                              Engineering, Administrative and Construction
+                              Assistant. - ECOCIV ING
+                            </h4>
+                            <p class="timeline-text">
+                              Technical drawing of environmental projects.
+                              Control and logistics of construction materials
+                              and preparation of flow models. Photographic
+                              control of projects. Support in environmental
+                              audits. Coordination and preparation of agendas
+                              for technical monitoring of projects.
+                            </p>
+                          </div> -->
+                          <!-- ===========  End item =========== -->
                         </div>
                       </div>
                     </div>
@@ -322,7 +349,7 @@
                   <div class="icon">
                     <i class="fa fa-mobile-alt"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>Responsive Design</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sapiente ut minima officia. Cumque, magnam corporis.
@@ -337,7 +364,7 @@
                   <div class="icon">
                     <i class="fa fa-laptop-code"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>Website Development</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sapiente ut minima officia. Cumque, magnam corporis.
@@ -367,7 +394,7 @@
                   <div class="icon">
                     <i class="fa fa-code"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>Creative Design</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sapiente ut minima officia. Cumque, magnam corporis.
@@ -397,7 +424,7 @@
                   <div class="icon">
                     <i class="fa fa-bullhorn"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>24 / 7 Support</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sapiente ut minima officia. Cumque, magnam corporis.
@@ -442,7 +469,7 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
-                      src=portfolio-2.jpg"
+                      src="portfolio-2.jpg"
                       alt=""
                     />
                   </div>
@@ -525,14 +552,14 @@
               <!-- ===========  Contact info item end  =========== -->
               <!-- ===========  Contact info item start  =========== -->
               <div class="contact-info-item padd-15">
-                <div class="icon"><i class="fa fa-brands fa-github fa-2xl"></i></div>
+                <div class="icon"><a href="https://github.com/andresdelgado15" target="_blank"><i class="fa fa-brands fa-github fa-2xl"></i></a></div>
                 <h4>Git</h4>
                 <p>andresdelgado15</p>
               </div>
               <!-- ===========  Contact info item end  =========== -->
               <!-- ===========  Contact info item start  =========== -->
               <div class="contact-info-item padd-15">
-                <div class="icon"><i class="fa fa-brands fa-linkedin fa-2xl"></i></i></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/edgar-andr%C3%A9s-delgado-castellano-8a14a2150/" target="_blank"><i class="fa fa-brands fa-linkedin fa-2xl"></i></a></div>
                 <h4>Linkedin</h4>
                 <p>Edgar Andres Delgado Castellano</p>
               </div>
@@ -541,42 +568,50 @@
             <h3 class="contact-title padd-15"> SEND ME AN EMAIL</h3>
             <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
             <!-- ===========  Contact Form  =========== -->
+            <form action="https://formspree.io/f/xpzeoalg" method="post" onsubmit="enviarFormulario(event)">
             <div class="row">
               <div class="contact-form padd-15">
                 <div class="row">
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Name">
+                      <input type="text" class="form-control" name="Name" placeholder="Name" required>
                     </div>
                   </div> 
                       <div class="form-item col-6 padd-15">
                         <div class="form-group">
-                          <input type="email" class="form-control" placeholder="Email">
+                          <input type="email" class="form-control" name="_replyto" placeholder="Email" required>
                         </div>
                       </div> 
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Subject">
+                      <input type="text" class="form-control" name="_subject"  placeholder="Subject" required>
                     </div>
                   </div> 
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                      <textarea name="Message" class="form-control" id="" placeholder="Message" required></textarea>
                     </div>
                   </div> 
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
-                    <button type="submit" class="btn">Send Message</button>
+                    <input type="submit" value="Send message" class="btn">
                   </div> 
                 </div>
 
               </div>
             </div>
+          </form>
+          <div id="mensaje-enviado">
+            <div class="contenido-mensaje">
+              <p>¡Thank you for contacting us! Your message has been sent and will respond as soon as possible.!</p>
+            </div>
+          </div>
+          
 
           </div>
         </section>
