Actualización: cambios en animación, About Me y nueva foto

--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
                   <span class="name">Edgar Andres Delgado Castellano</span>
                 </h3>
                 <h3 class="my-profession">
-                  I'm a <span class="typing">Junior web Developer</span>
+                  I'm an <span class="typing">IT Systems & Operations Coordinator</span>
                 </h3>
                 <p>
-                  Systems engineer with a year and a half of experience in web
-                  development focused on front-end development, and may more...
+                  Systems Engineer with <strong>over 2 years of experience</strong> in IT operations and infrastructure. I support office and field teams by administering systems, deploying practical technology solutions, and ensuring reliable day-to-day performance across devices, users, and business applications.
                 </p>
-                <a href="https://1drv.ms/b/s!AqEsvNn3rPRAxGo_SeMCZqK3fl6N?e=moX68N/CV_Andres.pdf" download="CV_Andres.pdf" target="_blank" class="btn">Download CV</a>
+                <a href="" download="CV_Andres.pdf" target="_blank" class="btn">Download CV</a>
               </div>
               <div class="home-img padd-15">
                 <img src="hero1.png" alt="" />
@@ -81,6 +80,7 @@
           </div>
         </section>
         <!-- ===========  Home section end  =========== -->
+
         <!-- ===========  About Section Start  =========== -->
         <section class="about section" id="about">
           <div class="container">
@@ -94,18 +94,10 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3>
-                      I'm Edgar Andres Delgado and <span>Web Developer</span>
+                      I'm Edgar Andres Delgado and <span>IT Systems & Operations Coordinator</span>
                     </h3>
                     <p>
-                      Systems engineer with a year and a half of experience in
-                      web development focused on front-end development. I am a
-                      team player who is enthusiastic about new technologies and
-                      strives for success in the field of programming and
-                      solution development, familiar with different
-                      technologies, environments and people, who have improved
-                      their skills both personally and collectively. His
-                      experience and his main interest is based on front end and
-                      content creation in Marketing Cloud.
+                      IT professional with <strong>more than 2 years of experience</strong> supporting and improving business technology environments. I install and maintain hardware and software, manage users and access, document processes, and coordinate updates to keep systems secure and available. I’m comfortable working with office and on-site teams, aligning IT solutions with daily operations so the business runs smoothly. I’m currently pursuing roles where I can continue providing internal IT support and infrastructure coordination aligned with operational needs.
                     </p>
                   </div>
                 </div>
@@ -116,7 +108,7 @@
                         <p>Birthday : <span> 31 January 1993</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Age : <span> 30</span></p>
+                        <p>Age : <span> 32</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Email : <span> andresd.7878@hotmail.com</span></p>
@@ -131,7 +123,7 @@
                         <p>Website : <span> www.andresdelgado.dev</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Role : <span> Front-End Developer</span></p>
+                        <p>Role : <span> IT Systems & Operations Coordinator</span></p>
                       </div>
 
                       <div class="info-item padd-15">
@@ -146,53 +138,57 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- ===== IT-focused skills ===== -->
                   <div class="skills padd-15">
                     <div class="row">
                       <div class="skill-item padd-15">
-                        <h5>HTML</h5>
-                        <div class="progress">
-                          <div class="progress-in" style="width: 95%"></div>
-                          <div class="skill-percent">95%</div>
-                        </div>
-                      </div>
-                      <div class="skill-item padd-15">
-                        <h5>CSS</h5>
+                        <h5>Windows Server Administration</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 85%"></div>
                           <div class="skill-percent">85%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>JS</h5>
+                        <h5>Linux Systems</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 80%"></div>
                           <div class="skill-percent">80%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>Bootstrap</h5>
+                        <h5>Cloud (AWS / Azure)</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 75%"></div>
+                          <div class="skill-percent">75%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
+                        <h5>Virtualisation (VMware / Hyper-V)</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 70%"></div>
                           <div class="skill-percent">70%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>React</h5>
+                        <h5>IT Security & Access Control</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 40%"></div>
-                          <div class="skill-percent">40%</div>
+                          <div class="progress-in" style="width: 75%"></div>
+                          <div class="skill-percent">75%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>Java</h5>
+                        <h5>Asset & License Management</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 60%"></div>
-                          <div class="skill-percent">60%</div>
+                          <div class="progress-in" style="width: 80%"></div>
+                          <div class="skill-percent">80%</div>
                         </div>
                       </div>
                     </div>
                   </div>
+                  <!-- ============================ -->
                 </div>
+
                 <div class="row">
                   <div class="education padd-15">
                     <h3 class="title">Education</h3>
@@ -200,6 +196,20 @@
                       <div class="timeline-box padd-15">
                         <div class="timeline shadow-dark">
                           <!-- ===========  timeline item  =========== -->
+                          <!-- ===========   item 0 =========== -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2023 - 2025
+                            </h3>
+                            <h4 class="timeline-title">
+                              Master in Software Engineering
+                            </h4>
+                            <p class="timeline-text">
+                              Postgraduate program focused on advanced software design, development, and deployment. Core areas of study include software architecture, cloud-based solutions, database systems, DevOps practices, and emerging technologies such as artificial intelligence and cybersecurity. The program also emphasizes agile methodologies, system integration, and real-world project implementation to deliver scalable and efficient IT solutions.
+                            </p>
+                          </div>
+                          <!-- ===========  End item =========== -->
                           <!-- ===========   item 1 =========== -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
@@ -256,22 +266,31 @@
                       </div>
                     </div>
                   </div>
+
                   <div class="experience padd-15">
                     <h3 class="title">Experience</h3>
                     <div class="row">
                       <div class="timeline-box padd-15">
                         <div class="timeline shadow-dark">
-                          <!-- ===========  timeline item  =========== -->
-                          <!-- ===========   item 1 =========== -->
+                          <!-- AVANT ENGINEERING -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2019 July - 2019
-                              October
-                            </h3>
-                            <h4 class="timeline-title">
-                              Backend Junior Developer - Bluecell
-                            </h4>
+                            <h3 class="timeline-date"><i class="fa fa-calendar"></i> Oct 2023 – Jun 2025</h3>
+                            <h4 class="timeline-title">IT Systems & Operations Coordinator – AVANT ENGINEERING Pty Ltd</h4>
+                            <p class="timeline-text">
+                              - Delivered IT support for office and field teams, ensuring reliable system performance.<br>
+                              - Managed installation and maintenance of hardware, software, and mobile devices.<br>
+                              - Administered user accounts, permissions, and access to business applications.<br>
+                              - Coordinated IT asset management and software licensing compliance.<br>
+                              - Monitored systems and implemented updates to enhance security and efficiency.
+                            </p>
+                          </div>
+
+                          <!-- Bluecell -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2019 July - 2019 October</h3>
+                            <h4 class="timeline-title">Backend Junior Developer - Bluecell</h4>
                             <p class="timeline-text">
                               Backend development in Amazon web Service. As well
                               as Implementation of Apis through an intelligent
@@ -281,17 +300,12 @@
                               needed.
                             </p>
                           </div>
-                          <!-- ===========  End item =========== -->
-                          <!-- ===========   item 2=========== -->
+
+                          <!-- MERCK -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2019 January - 2019
-                              July
-                            </h3>
-                            <h4 class="timeline-title">
-                              Web developer - MERCK S.A
-                            </h4>
+                            <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2019 January - 2019 July</h3>
+                            <h4 class="timeline-title">Web developer - MERCK S.A</h4>
                             <p class="timeline-text">
                               Backend development of new and digital projects.
                               Editing and maintaining changes in current
@@ -302,31 +316,12 @@
                               development of web applications under Drupal CMS.
                             </p>
                           </div>
-                          <!-- ===========  End item =========== -->
-                          <!-- ===========   item  3=========== -->
-                          <!-- <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                            <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i> 2014 -2017
-                            </h3>
-                            <h4 class="timeline-title">
-                              Engineering, Administrative and Construction
-                              Assistant. - ECOCIV ING
-                            </h4>
-                            <p class="timeline-text">
-                              Technical drawing of environmental projects.
-                              Control and logistics of construction materials
-                              and preparation of flow models. Photographic
-                              control of projects. Support in environmental
-                              audits. Coordination and preparation of agendas
-                              for technical monitoring of projects.
-                            </p>
-                          </div> -->
-                          <!-- ===========  End item =========== -->
+
                         </div>
                       </div>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -644,5 +639,14 @@
     <script src="script.js"></script>
     <script src="style-switcher.js"></script>
 
+    <!-- Override typed.js text so it doesn't show 'Designer' -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        var target = document.querySelector('.typing');
+        if (target) {
+          target.textContent = 'IT Systems & Operations Coordinator';
+        }
+      });
+    </script>
   </body>
 </html>
