Update Avant Engineering role description

--- a/index.html
+++ b/index.html
@@ -278,11 +278,7 @@
                             <h3 class="timeline-date"><i class="fa fa-calendar"></i> Oct 2023 – Jun 2025</h3>
                             <h4 class="timeline-title">IT Systems & Operations Coordinator – AVANT ENGINEERING Pty Ltd</h4>
                             <p class="timeline-text">
-                              - Delivered IT support for office and field teams, ensuring reliable system performance.<br>
-                              - Managed installation and maintenance of hardware, software, and mobile devices.<br>
-                              - Administered user accounts, permissions, and access to business applications.<br>
-                              - Coordinated IT asset management and software licensing compliance.<br>
-                              - Monitored systems and implemented updates to enhance security and efficiency.
+                              At Avant Engineering, I managed IT operations, including systems administration, technical support, technology solution deployment, and infrastructure maintenance. I supported both office and field staff, streamlining processes and ensuring operational continuity. I contributed to the planning and execution of system and application improvements, ensuring security, performance, and availability in line with business needs.
                             </p>
                           </div>
 
