Update Avant Engineering role description (third person)

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <h3 class="timeline-date"><i class="fa fa-calendar"></i> Oct 2023 – Jun 2025</h3>
                             <h4 class="timeline-title">IT Systems & Operations Coordinator – AVANT ENGINEERING Pty Ltd</h4>
                             <p class="timeline-text">
-                              At Avant Engineering, I managed IT operations, including systems administration, technical support, technology solution deployment, and infrastructure maintenance. I supported both office and field staff, streamlining processes and ensuring operational continuity. I contributed to the planning and execution of system and application improvements, ensuring security, performance, and availability in line with business needs.
+                              At Avant Engineering, Andrés managed IT operations, including systems administration, technical support, technology solution deployment, and infrastructure maintenance. He supported both office and field staff, streamlining processes and ensuring operational continuity. He contributed to the planning and execution of system and application improvements, ensuring security, performance, and availability in line with business needs.
                             </p>
                           </div>
 
