Update Avant Engineering role description

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <h3 class="timeline-date"><i class="fa fa-calendar"></i> Oct 2023 – Jun 2025</h3>
                             <h4 class="timeline-title">IT Systems & Operations Coordinator – AVANT ENGINEERING Pty Ltd</h4>
                             <p class="timeline-text">
-                              At Avant Engineering, Andrés managed IT operations, including systems administration, technical support, technology solution deployment, and infrastructure maintenance. He supported both office and field staff, streamlining processes and ensuring operational continuity. He contributed to the planning and execution of system and application improvements, ensuring security, performance, and availability in line with business needs.
+                              Managed and maintained the company’s IT infrastructure, including system administration, software deployment, and hardware support. Delivered timely technical assistance to both office and field staff, ensuring seamless operations. Implemented system upgrades and security measures to enhance performance and protect business data. Coordinated technology solutions to improve workflow efficiency and supported the organization’s operational needs through proactive problem-solving and strategic IT planning.
                             </p>
                           </div>
 
