Update Avant Engineering role description

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <h3 class="timeline-date"><i class="fa fa-calendar"></i> Oct 2023 – Jun 2025</h3>
                             <h4 class="timeline-title">IT Systems & Operations Coordinator – AVANT ENGINEERING Pty Ltd</h4>
                             <p class="timeline-text">
-                              Managed and maintained the company’s IT infrastructure, including system administration, software deployment, and hardware support. Delivered timely technical assistance to both office and field staff, ensuring seamless operations. Implemented system upgrades and security measures to enhance performance and protect business data. Coordinated technology solutions to improve workflow efficiency and supported the organization’s operational needs through proactive problem-solving and strategic IT planning.
+                              As IT Systems & Operations Coordinator at AVANT ENGINEERING Pty Ltd, I was responsible for managing and optimising the company’s IT infrastructure, including servers, cloud systems, and hybrid work environments. My duties included performing updates and security patches, troubleshooting technical issues, managing Google Workspace, using Google Earth for project planning and tracking, and maintaining the corporate website to ensure uptime, security, and accurate content.
                             </p>
                           </div>
 
